Fixed bug #50660 (exif_read_data(): Illegal IFD offset (works fine with other exif readers))